--- a/Desktop/daw/frontdaw/src/app/views/cliente/cliente.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/cliente/cliente.component.html
@@ -8,9 +8,9 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
     <!-- Position Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="id_cliente">
       <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id_cliente}} </td>
     </ng-container>
   
     <!-- Name Column -->
@@ -44,7 +44,7 @@
             <button mat-button color="primary" (click)="openModal(row)">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button mat-button color="accent" (click)="onDelete(row.id)">
+            <button mat-button color="accent" (click)="onDelete(row.id_cliente)">
                 <mat-icon>delete_forever</mat-icon>
             </button>
         </td>
