--- a/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario.component.html
@@ -1,9 +1,9 @@
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
     <!-- Position Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="id_veterinario">
       <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id_veterinario}} </td>
     </ng-container>
   
     <!-- Name Column -->
@@ -26,7 +26,7 @@
 
     <ng-container matColumnDef="fch_nacimiento">
         <th mat-header-cell *matHeaderCellDef> Fecha de nacimiento </th>
-        <td mat-cell *matCellDef="let element"> {{element.fch_nacimiento}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.fch_nacimiento | date:'dd/MM/yyyy'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="email">
@@ -41,7 +41,7 @@
 
       <ng-container matColumnDef="especialidad">
         <th mat-header-cell *matHeaderCellDef> Especialidad </th>
-        <td mat-cell *matCellDef="let element"> {{element.especialidad.especialidad}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.especialidadVet.nom_especialidad}} </td>
       </ng-container>
 
       <ng-container matColumnDef="editar-eliminar">
@@ -50,7 +50,7 @@
             <button mat-button color="primary" (click)="openModal(row)">
                 <mat-icon>edit</mat-icon>
             </button>    
-            <button mat-button color="accent" (click)="onDelete(row.id)">
+            <button mat-button color="accent" (click)="onDelete(row.id_veterinario)">
                 <mat-icon>delete_forever</mat-icon>
             </button>  
         </td>
