--- a/Desktop/daw/frontdaw/src/app/app.component.html
+++ b/Desktop/daw/frontdaw/src/app/app.component.html
@@ -2,6 +2,9 @@
     <p>Logo</p>
     <a href="">Clientes</a>
     <a href="">Veterinarios</a>
+    <a href="">Trabajadores</a>
 </header>
+<!--<app-trabajador></app-trabajador>-->
 <!--<app-cliente></app-cliente>-->
 <app-veterinario></app-veterinario>
+<!--<app-mascota></app-mascota>-->
