--- a/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario-modal/veterinario-modal.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario-modal/veterinario-modal.component.html
@@ -1,48 +1,48 @@
 <mat-form-field appearance="fill">
-    <mat-label>Nombres:</mat-label>
-    <input matInput placeholder="Nombres" [(ngModel)]="veterinario.nombre" >
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Apellidos:</mat-label>
-    <input matInput placeholder="Apellidos" [(ngModel)]="veterinario.apellidos">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Celular:</mat-label>
-    <input matInput placeholder="Celular" [(ngModel)]="veterinario.celular">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Fecha de nacimiento:</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="veterinario.fch_nacimiento">
-    <mat-hint>DD/MM/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Correo:</mat-label>
-    <input matInput placeholder="Correo" [(ngModel)]="veterinario.email">
-  </mat-form-field>
-  <mat-form-field appearance="fill">
-    <mat-label>Dirección:</mat-label>
-    <input matInput placeholder="Dirección" [(ngModel)]="veterinario.direccion">
-  </mat-form-field>
-  <!-- ANGULAR 11 -->
-  <!--<mat-form-field appearance="fill">
-    <mat-label>{{veterinario.especialidad.nom_especialidad}}</mat-label>
-    <mat-select matInput placeholder="Especialidad" [(ngModel)]="veterinario.especialidad">
-        <mat-option *ngFor="let e of especialidad" [value]="e">
-            {{ e.nom_especialidad }}
-        </mat-option>
-    </mat-select>
-  </mat-form-field>-->
+  <mat-label>Nombres:</mat-label>
+  <input matInput placeholder="Nombres" [(ngModel)]="veterinario.nombre" >
+</mat-form-field>
+<mat-form-field appearance="fill">
+  <mat-label>Apellidos:</mat-label>
+  <input matInput placeholder="Apellidos" [(ngModel)]="veterinario.apellidos">
+</mat-form-field>
+<mat-form-field appearance="fill">
+  <mat-label>Celular:</mat-label>
+  <input matInput placeholder="Celular" [(ngModel)]="veterinario.celular">
+</mat-form-field>
+<!--<mat-form-field appearance="fill">
+  <mat-label>Fecha de nacimiento:</mat-label>
+  <input matInput [matDatepicker]="picker" [(ngModel)]="veterinario.fch_nacimiento">
+  <mat-hint>DD/MM/YYYY</mat-hint>
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>-->
+<mat-form-field appearance="fill">
+  <mat-label>Correo:</mat-label>
+  <input matInput placeholder="Correo" [(ngModel)]="veterinario.email">
+</mat-form-field>
+<mat-form-field appearance="fill">
+  <mat-label>Dirección:</mat-label>
+  <input matInput placeholder="Dirección" [(ngModel)]="veterinario.direccion">
+</mat-form-field>
+<!-- ANGULAR 11 -->
+<mat-form-field appearance="fill">
+  <mat-label>{{veterinario.especialidad.nom_especialidad}}</mat-label>
+  <mat-select matInput placeholder="Especialidad" [(ngModel)]="veterinario.especialidad">
+      <mat-option *ngFor="let e of especialidad" [value]="e">
+          {{ e.nom_especialidad }}
+      </mat-option>
+  </mat-select>
+</mat-form-field>
 
-  <!--<select name="id_especialidad" class="form-control" formControlName="id_especialidad">
-    <option value="0">Seleccione el sexo</option>
-    <option *ngFor="let e of especialidad" [value]="e.id_especialidad">{{ e.nom_especialidad }}</option>
-  </select>-->
+<!--<select name="id_especialidad" class="form-control" formControlName="id_especialidad">
+  <option value="0">Seleccione el sexo</option>
+  <option *ngFor="let e of especialidad" [value]="e.id_especialidad">{{ e.nom_especialidad }}</option>
+</select>-->
 
-  <button mat-button color="primary">
-    Aceptar
+<button mat-button color="primary" (click)="aceptar()">
+  Aceptar
 </button>
-<button mat-button color="primary">
-  Cancelar
+<button mat-button color="primary" (click)="cerrar()">
+Cancelar
 </button>
