--- a/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/veterinario/veterinario.component.html
@@ -1,3 +1,4 @@
+<h1>Veterinarios</h1>
 <div>
   <mat-form-field>
     <input matInput (keyup)="filtrar($event.target.value)" placeholder="buscar veterinario">
