--- a/Desktop/daw/frontdaw/src/app/app.component.html
+++ b/Desktop/daw/frontdaw/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a href="">Trabajadores</a>
 </header>
 <!--<app-trabajador></app-trabajador>-->
-<!--<app-cliente></app-cliente>-->
+<app-cliente></app-cliente>
+<br><br>
 <app-veterinario></app-veterinario>
 <!--<app-mascota></app-mascota>-->
