--- a/Desktop/daw/frontdaw/src/app/views/cliente/cliente.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/cliente/cliente.component.html
@@ -1,4 +1,6 @@
-  <div>
+<h1>Cliente</h1>
+<br>
+<div>
     <mat-form-field>
       <input matInput (keyup)="filtrar($event.target.value)" placeholder="buscar cliente">
     </mat-form-field>
