--- a/Desktop/daw/frontdaw/src/app/app.component.html
+++ b/Desktop/daw/frontdaw/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header style="display: flex; justify-content: space-around;">
-    <p>Logo</p>
+    <p>Veterinaria</p>
     <a href="">Clientes</a>
     <a href="">Veterinarios</a>
     <a href="">Trabajadores</a>
