--- a/Desktop/daw/frontdaw/src/app/app.component.html
+++ b/Desktop/daw/frontdaw/src/app/app.component.html
@@ -3,9 +3,12 @@
     <a href="">Clientes</a>
     <a href="">Veterinarios</a>
     <a href="">Trabajadores</a>
+    <a>Mascotas</a>
 </header>
-<!--<app-trabajador></app-trabajador>-->
+<!---->
+<app-trabajador></app-trabajador>
+<!--
 <app-cliente></app-cliente>
 <br><br>
-<app-veterinario></app-veterinario>
+<app-veterinario></app-veterinario>-->
 <!--<app-mascota></app-mascota>-->
