--- a/Desktop/daw/frontdaw/src/app/views/trabajador/trabajador.component.html
+++ b/Desktop/daw/frontdaw/src/app/views/trabajador/trabajador.component.html
@@ -1,3 +1,4 @@
+<h1>Trabajadores</h1>
 <div>
     <mat-form-field>
       <input matInput (keyup)="filtrar($event.target.value)" placeholder="buscar trabajador">
